--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Compare Everything</title>
+  <title>This is the First page of Compare Everything</title>
   <style>
     * {
   margin: 0;
